--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 Revision history for CatalystX-CRUD-ModelAdapter-DBIC
 
-0.01    xxxx
+0.01    11 Aug 2008
         First version, released on an unsuspecting world.
 
