--- a/Changes
+++ b/Changes
@@ -20,3 +20,8 @@ Revision history for CatalystX-CRUD-ModelAdapter-DBIC
 
 0.06    27 Aug 2008
         * tweek make_query() to return hash struct like RDBO does
+
+0.07    xxx
+        * implement Utils features for ne_sign() use_ilike() and treat_like_int()
+
+
