--- a/Changes
+++ b/Changes
@@ -21,7 +21,7 @@ Revision history for CatalystX-CRUD-ModelAdapter-DBIC
 0.06    27 Aug 2008
         * tweek make_query() to return hash struct like RDBO does
 
-0.07    xxx
+0.07    11 Sept 2008
         * implement Utils features for ne_sign() use_ilike() and treat_like_int()
         * tweek make_sql_query() output to match DBIC syntax for -or and -and searches
         * get relationships from source not class
