--- a/Changes
+++ b/Changes
@@ -35,4 +35,5 @@ Revision history for CatalystX-CRUD-ModelAdapter-DBIC
 0.10    14 July 2009
         * fix tests so that (a) sql is complete and (b) skip is sqlite3 cmd tool not found
 
-
+0.11    xxx
+        * TODO: fix order_by logic to only prefix 'me.' when column actually exists
