--- a/Changes
+++ b/Changes
@@ -33,7 +33,8 @@ Revision history for CatalystX-CRUD-ModelAdapter-DBIC
         * fix ORDER BY via cxc-order so that it actually works, including tests for multi-column sort.
 
 0.10    14 July 2009
-        * fix tests so that (a) sql is complete and (b) skip is sqlite3 cmd tool not found
+        * fix tests so that (a) sql is complete and (b) skip if sqlite3 cmd tool not found
 
-0.11    xxx
-        * TODO: fix order_by logic to only prefix 'me.' when column actually exists
+0.11    1 Dec 2009
+        * fix order by logic to check for cxc-m2m param (still a TODO item)
+        * refactor tests to put Root methods in their own controller
